[package]
name = "file-archive-utils"
version = "0.1.0"
edition = "2024"

[dependencies]
chrono = { version = "0.4.42", features = ["serde"] }
serde = { version = "1.0", features = ["derive"] }
serde-saphyr = "0.0.14"
sha2 = "0.10"
uuid = { version = "1.19.0", features = ["v4"] }
yaml-rust2 = "0.11.0"
